# gstreamer-win

./: COPYING  Common.props  Common.rules  Common.targets  Common.xml  GStreamer.sln  LibRtmp.sln  ReadMe.txt  atk.sln  cairo.sln  gdk-pixbuf.sln  glib.sln  gst-python.sln  gtk+-2.24.25.sln  harfbuzz.sln  libgpac.sln  libpng.sln  pango.sln  pixman.sln
Licenses/: glib.txt  gpl.rtf  libjpeg.txt  neon.txt  zlib.txt
Main/GStreamer/Source/gst-plugins-good/sys/osxaudio/: AudioDevice.cpp  AudioDevice.h  AudioDeviceList.cpp  AudioDeviceList.h  AudioRingBuffer.cpp  AudioRingBuffer.h  AudioThruEngine.cpp  AudioThruEngine.h  Makefile  Makefile.am  Makefile.in  SoundflowerController.h  SoundflowerController.mm  gstosxaudio.c  gstosxaudiosink.c  gstosxaudiosrc.c  gstosxaudiosrc.h  gstosxringbuffer.c  gstosxringbuffer.h  gstosxsoundflowersrc.h  gstosxsoundflowersrc.mm
Main/atk/: config.h.win32
Main/atk/atk/: atk-enum-types.c  atk-enum-types.h  atk.def  atk.h  atk.rc  atk.rc.in  atk.symbols  atkaction.c  atkcomponent.c  atkdocument.c  atkdocument.h  atkeditabletext.c  (+34 more)
Main/cairo/: cairo-version.h
Main/gdk-pixbuf-2.26.3/: config.h
Main/glib-2.32.4/: config.h  config.h.win32
Main/gtk+-2.24.25/: config.h.win32
Main/harfbuzz-0.9.4/: config.h  config.h.in
Main/libgpac/: libgpac.def  libgpac.vcproj
Main/libpng-1.5.12/: config.h  libpng.sym  png.c  pngrio.c  pngrutil.c  pngstruct.h  pngwio.c
Main/pango/: config.h.win32
Main/pixman/: Makefile.in  config.h.in
Main/regex/: regex.sln
Main/rtmpdump-2.3/: Makefile  getopt.c  rtmpdump.cpp  rtmpdump.vcproj  rtmpgw.cpp  rtmpgw.vcproj  rtmpparse.cpp  rtmpparse.vcproj  rtmpsrv.cpp  rtmpsrv.vcproj  rtmpsuck.cpp  rtmpsuck.vcproj  thread.cpp
Shared/GCC/: ReadMe.txt
Shared/Java/: ReadMe.txt
Shared/SDKs/: ReadMe.txt
Shared/Scripts/: Arch-x86.sh  CRT-x86.sh  CRT-x86_64.sh  Common.sh  Init-Ubuntu-8.04.sh  Output.sh  Version.sh
Shared/WiX/: Extensions.sln
(+2920 files in other folders)
